remove share button

--- a/MyCamera/Base.lproj/Main.storyboard
+++ b/MyCamera/Base.lproj/Main.storyboard
@@ -17,10 +17,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="baL-BO-wBH">
-                                <rect key="frame" x="16" y="44" width="382" height="668"/>
+                                <rect key="frame" x="16" y="44" width="382" height="728"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dc7-cF-vt7">
-                                <rect key="frame" x="16" y="742" width="382" height="30"/>
+                                <rect key="frame" x="16" y="802" width="382" height="30"/>
                                 <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="BJ6-4Y-T24"/>
@@ -32,19 +32,6 @@
                                     <action selector="cameraButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jdh-ws-70f"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mWZ-o5-9j5">
-                                <rect key="frame" x="16" y="802" width="382" height="30"/>
-                                <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="zmG-xA-8lK"/>
-                                </constraints>
-                                <state key="normal" title="SNSに投稿する">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="shareButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="evZ-GU-tBS"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -52,10 +39,7 @@
                             <constraint firstItem="baL-BO-wBH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="06V-dZ-9Lw"/>
                             <constraint firstItem="Dc7-cF-vt7" firstAttribute="top" secondItem="baL-BO-wBH" secondAttribute="bottom" constant="30" id="0gk-jl-zwX"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="baL-BO-wBH" secondAttribute="trailing" constant="16" id="5YT-R0-9Yl"/>
-                            <constraint firstItem="mWZ-o5-9j5" firstAttribute="top" secondItem="Dc7-cF-vt7" secondAttribute="bottom" constant="30" id="6t6-Hd-j0s"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="mWZ-o5-9j5" secondAttribute="trailing" constant="16" id="TjV-gX-pbG"/>
-                            <constraint firstItem="mWZ-o5-9j5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="gpg-sg-8PC"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="mWZ-o5-9j5" secondAttribute="bottom" constant="30" id="sL6-JK-EbV"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Dc7-cF-vt7" secondAttribute="bottom" constant="30" id="UNx-IZ-t6J"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Dc7-cF-vt7" secondAttribute="trailing" constant="16" id="uC4-NK-RHS"/>
                             <constraint firstItem="baL-BO-wBH" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="wsC-Et-ubD"/>
                             <constraint firstItem="Dc7-cF-vt7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="zbu-as-dMf"/>
