--- a/MyCamera/Base.lproj/Main.storyboard
+++ b/MyCamera/Base.lproj/Main.storyboard
@@ -53,6 +53,21 @@
             </objects>
             <point key="canvasLocation" x="132" y="117"/>
         </scene>
+        <!--Effect View Controller-->
+        <scene sceneID="MxX-Jn-cve">
+            <objects>
+                <viewController id="SmW-cs-3aJ" customClass="EffectViewController" customModule="MyCamera" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="jJj-co-0jX">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="m7j-6x-vY7"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DLE-Jq-GD6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1258" y="117"/>
+        </scene>
     </scenes>
     <resources>
         <systemColor name="systemBackgroundColor">
